implemntacion del offline
